k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: marketplace-db
  namespace: marketplace-namespace
spec:
  selector:
    matchLabels:
      app: marketplace-db
  serviceName: "marketplace-db-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: marketplace-db
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-pvc
