k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-service
  namespace: marketplace-namespace
spec:
  selector:
    app: marketplace
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: http-port
  - protocol: TCP
    port: 443
    targetPort: 5001
    name: https-port
  type: ClusterIP
